19991012-02:50 GMT+1 Victor Szel <info@szelvesz.hu>
   * include/caundoc.h
     + _bcmp, _bscan added (thanks to Jose Lalin)
   * source/rtl/set.c
     + TOFIX: added for DEFPATH()
   * source/rtl/Makefile
   + source/rtl/input.prg
   + source/rtl/setta.prg
   + source/rtl/wait.prg
     + __INPUT(), __WAIT(), SETTYPEAHEAD() functions added.
       (Thanks to Jose Lalin)
       Note that INPUT() is not yet working, since it require macro 
       functionality.
       Please add them to non-GNU make systems.

19991012-02:30 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/filesys.c
     + Added some info about driver numbering to hb_fsChDrv(), hb_fsIsDrv(),
       hb_fsCurDrv(), hb_fsCurDir()
     + hb_fsIsDevice() added. (by Jose Lalin), return value type changed to
       BOOL to match Clipper.
     ! hb_fsIsDrv(), hb_fsChDrv() fixed to call the OS functions with the 
       right drive number. (Please test this!)
   * include/ctoharb.h
     + More undocumented file functions added. (by Jose Lalin)
   * include/filesys.h
     ! Missing hb_fsSetDev*() prototypes added.
   * include/ctoharb.h
     ! Double copyright header fixed.
   * source/vm/hvm.c
     % w += 1 -> w++

19991011-23:54 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/fm.c
     + Newline readded to the closing //INFO message ;)
   * source/rdd/dbfcdx/dbfcdx1.prg
     - Removed the Inithandler/LockErrHandler since they are not there in
       Clipper.

19991011-14:20 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/set.c
     ! Corrected handling of NIL second parameter for SET() when the
       first parameter is _SET_ALTFILE, _SET_DEVICE, _SET_EXTRAFILE,
       or _SET_PRINTFILE.

19991011-19:30 GMT+1 Bruno Cantero <bruno@issnet.net>

   * source/rtl/dummy.prg
     - Removed dbSetFilter(), dbClearFilter() and dbFilter() functions.

   * include/rddapi.h
   * source/rdd/dbcmd.c
   * source/rdd/dbf1.c
   * source/rdd/dbfcdx/dbfcdx1.c
     * Fixed SET DELETED.